--- a/app/src/main/res/layout/fragment_top.xml
+++ b/app/src/main/res/layout/fragment_top.xml
@@ -63,8 +63,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="160dp"
         android:layout_marginTop="15dp"
-        android:ems="10"
-        android:inputType="text"
+        android:hint="Enter Full Name"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -75,8 +74,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="160dp"
         android:layout_marginTop="72dp"
-        android:ems="10"
-        android:inputType="text"
+        android:hint="Enter Hire Date"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -87,8 +85,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="160dp"
         android:layout_marginTop="132dp"
-        android:ems="10"
-        android:inputType="text"
+        android:hint="Enter Salary"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/textView11"
         app:layout_constraintStart_toStartOf="parent"
@@ -100,8 +97,18 @@
         android:layout_height="48dp"
         android:layout_marginStart="44dp"
         android:layout_marginTop="12dp"
+        android:onClick="Search_Click"
         android:text="Search"
         app:layout_constraintStart_toEndOf="@+id/textView11"
         app:layout_constraintTop_toBottomOf="@+id/txt_search_salary" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rycl"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
