--- a/app/src/main/res/layout/employee_card.xml
+++ b/app/src/main/res/layout/employee_card.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-    <androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-a"
-        xmlns:app2="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app2="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
 
-        android:layout_width="380dp"
-        android:layout_height="110dp"
-        android:background="#F1E9E9"
-        android:backgroundTint="#F1E9E9"
-        app:cardCornerRadius="25dp"
-        app:cardElevation="4dp"
-        tools:ignore="MissingConstraints">
+    android:layout_width="match_parent"
+    android:layout_height="110dp"
+    android:layout_marginBottom="10dp"
+    android:background="#F1E9E9"
+    android:backgroundTint="#F1E9E9"
+    app:cardCornerRadius="25dp"
+    app:cardElevation="4dp"
+    tools:cardCornerRadius="30dp"
+    tools:ignore="MissingConstraints">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="299dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:background="#F1E9E9"
         app:layout_constraintCircleRadius="30dp"
