--- a/app/src/main/res/layout/employee_card.xml
+++ b/app/src/main/res/layout/employee_card.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-    <androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-a"
-        xmlns:app2="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app2="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
 
-        android:layout_width="380dp"
-        android:layout_height="110dp"
-        android:background="#F1E9E9"
-        android:backgroundTint="#F1E9E9"
-        app:cardCornerRadius="25dp"
-        app:cardElevation="4dp"
-        tools:ignore="MissingConstraints">
+    android:id="@+id/cardView"
+    android:layout_width="380dp"
+    android:layout_height="110dp"
+    android:background="#F1E9E9"
+    android:backgroundTint="#F1E9E9"
+    app:cardCornerRadius="25dp"
+    app:cardElevation="4dp"
+    tools:ignore="MissingConstraints">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
@@ -73,6 +73,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2"
             app:layout_constraintVertical_bias="0.5" />
+
+        <TextView
+            android:id="@+id/txtID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:visibility="invisible"
+            tools:layout_editor_absoluteX="225dp"
+            tools:layout_editor_absoluteY="4dp" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
